--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   </center>
   <script src="https://unpkg.com/web-animations-js@2.3.2/web-animations.min.js"></script>
   <script src="https://unpkg.com/muuri@0.8.0/dist/muuri.min.js"></script>
-  <script src="main.js"></script>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
