--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
     
         <section class="grid" id="grid">
           <div class="item" 
-             data-categoria="ciudades"
+             data-categoria="2019"
              data-etiquetas="ciudades autos carros calles"
              data-descripcion="1.- Lorem ipsum dolor sit amet consectetur."
           >
